adopted background section: added references

--- a/thesis/content/background.tex
+++ b/thesis/content/background.tex
@@ -4,25 +4,25 @@ This chapter is intended to provide information on some basic principles in term
 
 \section{Fundamentals of Object-Oriented Programming}
 
-The paradigm of Object Oriented Programming (OOP) uses \emph{classes} as primary mean to gather and structure data. The data within a class is mostly called \emph{attributes}, means to interact with it are called \emph{methods} \cite[80]{Castagna97}. 
+The paradigm of Object Oriented Programming (OOP) uses \emph{classes} as primary mean to gather and structure data. The data within a class is mostly called \emph{attributes}, means to interact with it are called \emph{methods} \cite[p.80]{Castagna97} \cite[p.14]{gof}. 
 
 While a class is the abstract definition of such a container an \emph{object} is a concrete instance filled with actual data. Attributes that may differ between each instance are therefore also called \emph{instance variables}. Variables that belong to the class itself and thus are only instantiated once per class are called \emph{class variables}. 
 
 \subsection{Encapsulation} 
-To encourage refactoring \footnote{Refactoring describes the process of re-writing classes to improve readability, performance or other criteria while preserving its signature, inputs and outputs.} each class should prevent direct access to is internals from the outside. It should however provide a well-defined interface in terms of methods for manipulating the data, as this allows the class to enforce invariants \footnote{A invariant is some kind of requirement that must be fulfilled at all times before and after a method call. An example of such a invariant could be the descending sort order of an integer list.}. This means that it hides all information not relevant to others as they are only implementational details and thus not relevant. As other classes now rely on an interface rather than concrete implementations the code is called \emph{loosely coupled}. Modifying the internals now does not break interdependencies which encourages programmers to perform refactoring resulting in improved code quality. 
+To encourage refactoring \footnote{Refactoring describes the process of re-writing classes to improve increase cohesion, decrease coupling, separate concerns, modularize system concerns, shrink our functions and classes, choose better names and so on. \cite[p. 172]{clean-code}.} each class should prevent direct access to is internals from the outside. It should however provide a well-defined interface in terms of methods for manipulating the data, as this allows the class to enforce invariants \footnote{A invariant is some kind of requirement that must be fulfilled at all times before and after a method call. An example of such a invariant could be the descending sort order of an integer list.}. This means that it hides all information not relevant to others as they are only implementational details and thus not relevant. As other classes now rely on an interface rather than concrete implementations the code is called \emph{loosely coupled}. Modifying the internals now does not break interdependencies which encourages programmers to perform refactoring resulting in improved code quality. 
 
-Many programming languages provide different access levels varying from visible to all others, accessible only within the class or visible from within and derived classes. The latter access level can be problematic as they effectively break the encapsulation. TODOTODO
+Many programming languages provide different access levels varying from visible to all others (in the case of Java: \emph{public}), accessible only within the class (\emph{private}) or visible from within and derived classes (emph{protected}). The latter access level can be problematic as they can effectively break the encapsulation. When many protected variables are declared it may happen that subclasses depend strongly on them. If this happens a change of the base class could lead to necessary changes in the subclasses, which is exactly what encapsulation tries to avoid \cite[p.19]{gof}.
 
 \subsection{Inheritance}
-Inheritance describes the concept of a child class inheriting all attributes, methods and other properties from a parent class. The child class is connected with the base trough a \emph{is-a}-relationship. The child is therefore a superset of the base class as it can be extended to meet the new requirements. This concept is important as it encourages developers to reuse existing code and in that way lower the risk of programming errors \cite{johnson91}. 
+Inheritance describes the concept of a child class inheriting all attributes, methods and other properties from a parent class. The child class is connected with the base trough a \emph{is-a}-relationship. The child is therefore a superset of the base class as it can be extended to meet the new requirements. This concept is important as it encourages developers to reuse existing code and in that way lower the risk of programming errors \cite{johnson91} and is often called \emph{white-box-reuse} as the internals of the base class in general are visible to the programmer \cite[p.19]{gof}. 
 
-A prominent problem often mentioned in this context is the \emph{Diamond Problem} in the sense of multiple inheritance. It describes a situation in which at least two parents of a derived class share a single base class \cite{Truyen04}. If now a method of the topmost class is overridden by both ancestors of lowermost class, the question arises which of the two possible methods should be called. Some languages, such as Java or C\#, do not support multiple inheritance for this reason, while others explicitly allow it, such as C++ or Python. In this cases if a situation as described in the Diamond Problem arises the results can cause undefined behaviour.
+A prominent problem often mentioned in this context is the \emph{Diamond Problem} in the sense of multiple inheritance. It describes a situation in which at least two parents of a derived class share a single base class \cite{truyen04}. If now a method of the topmost class is overridden by both ancestors of lowermost class, the question arises which of the two possible methods should be called. Some languages, such as Java or C\#, do not support multiple inheritance for this reason, while others explicitly allow it, such as C++ or Python. In this cases if a situation as described in the Diamond Problem arises the results can cause undefined behaviour.
 
 \subsection{Polymorphism}
 
-Polymorphism describes the ability to tie the same interface to different belonging types. TODOTODO citation There are two main kinds of polymorphism: The \emph{overriding} polymorphism, which is tied closely to inheritance and describes the ability to choose at runtime between equally-called methods and attributes of a base class and its child class. For example, if a base class \texttt{Animal} has a method \texttt{speak}, each derived class \texttt{Dog} and \texttt{Cat} both inherit this method. With overriding polymorphism if the method is called the two subclasses are able to behave in different ways while providing the same programming interface. It is determined at runtime which method should be executed for an object. 
+Polymorphism is closely tied to the term of \emph{dynamic binding}, which describes the process that a method call is not statically bound to an implementation at compile time but associated with an actual implementation at run-time. Polymorphism extends this process by stating that objects of the same interface can be used for each other and swapped at compile time. \cite[p.14]{gof}. There are two main kinds of polymorphism: The \emph{overriding} polymorphism, which is tied closely to inheritance and describes the ability to choose at runtime between equally-called methods and attributes of a base class and its child class \cite{coupling}. For example, if a base class \texttt{Animal} has a method \texttt{speak}, each derived class \texttt{Dog} and \texttt{Cat} both inherit this method. With overriding polymorphism if the method is called the two subclasses are able to behave in different ways while providing the same programming interface. It is determined at runtime which method should be executed for an object. 
 
-The other important kind is \emph{overloading} polymorphism which is used to provide methods with the same name but different signatures (and thus attributes). An example could be two methods called \texttt{add}, one taking a number, one taking a text as a parameter. Here it is determined at compile time which method will be used. \footnote{https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/classes-and-structs/polymorphism, accessed 31.08.2017}.
+The other important kind is \emph{overloading} polymorphism which is used to provide methods with the same name but different signatures (and thus attributes) \cite{data-types}. An example could be two methods called \texttt{add}, one taking a number, one taking a text as a parameter. Here it is determined at compile time which method will be used. \footnote{https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/classes-and-structs/polymorphism, accessed 31.08.2017}.
 
 \subsection{Single Responsibility Principle}
 \label{sec:srp}
@@ -43,21 +43,21 @@ The main difference between architectural and design patterns lies in different 
 
 \subsection{Repository}
 \label{sec:repository}
-The repository design pattern is a programming strategy that is useful when operating with some kind of data persistence service. It provides an abstraction layer between the business code and the place where data of the application is actually saved, providing a simple and clean interface for the business code and leads to a looser coupling. All actions dealing with specialized database operations, object retrieval and others are hidden by a repository, because of this it is considered part of a data-abstraction-layer (see section \ref{sec:multi-tier}). A repository is often used if only basic operations with the data source are necessary. Other patterns and frameworks supporting advanced functionality and are available however they are not relevant to this thesis.
+The repository design pattern is a programming strategy that is useful when operating with some kind of data persistence service. It provides an abstraction layer between the business code and the place where data of the application is actually saved, providing a simple and clean interface for the business code and leads to a looser coupling \footnote{\href{https://martinfowler.com/eaaCatalog/repository.html}{https://martinfowler.com/eaaCatalog/repository.html}}. All actions dealing with specialized database operations, object retrieval and others are hidden by a repository, because of this it is considered part of a data-abstraction-layer (see section \ref{sec:multi-tier}). A repository is often used if only basic operations with the data source are necessary. Other patterns and frameworks supporting advanced functionality and are available however they are not relevant to this thesis.
 
-To create one repository per business object (data class) is the most basic way of implementing this pattern. Asides from the basic \emph{CRUD}-Operations \footnote{Create, read, update, delete}, each repository should provide specialized object retrieval methods that are only valid for the business model it was programmed for. 
+To create one repository per business object (data class) is the most basic way of implementing this pattern. Asides from the basic \emph{CRUD}-Operations \footnote{Create, read, update, delete}, each repository should provide specialized object retrieval methods that are only valid for the business model it was programmed for. The addition of more complex object retrieval methods differentiates a data mapper \footnote{\href{https://martinfowler.com/eaaCatalog/dataMapper.html}{https://martinfowler.com/eaaCatalog/dataMapper.html}} from a repository. 
 
 For example, in a booking system there may be a data class \texttt{Order}. A repository for this class may then provide a method called \texttt{getOrdersByUsername}. In general only methods that are actually needed should be implemented, which is described in the \emph{YAGNI}-principle \footnote{You aren't gonna need it}.
 
 \subsection{Dependency Injection}
-Dependency Injection is a very common and important pattern that is used in object oriented programming. 
+Dependency Injection is a very common and important pattern that is used in object oriented programming. It serves the Single-Responsibility-Principle in saying that a object should not be responsible of creating its own dependencies, instead some third supervising party \emph{injects} the dependency either using constructor parameters or associated setters \cite[p.159]{clean-code}. Furthermore it encourages the use of interfaces and therefore helps to switch between implementations of dependencies. Especially in the terms of testing this is considered a huge advantage as it enables testers to introduce mock objects \footnote{\href{https://javaranch.com/journal/200709/dependency-injection-unit-testing.html}{https://javaranch.com/journal/200709/dependency-injection-unit-testing.html}}.
 
 
 \subsection{Model-View-Controller}
 \label{sec:mvc}
-The Model-View-Controller (MVC) is a pattern that describes a separation of a program in three layers, it is considered both a design and a architectural pattern, depending on the point of view.  Its goal is to improve flexibility and extensibility of an application which can help to improve maintainability. It consists of three components, from which the \emph{model} contains the business logic, the \emph{controller} processes interactions and the \emph{view} presents some kind of user interface. 
+The Model-View-Controller (MVC) is a pattern that describes a separation of a program in three layers, it is considered both a design and a architectural pattern, depending on the point of view.  Its goal is to improve flexibility and extensibility of an application which can help to improve maintainability. It consists of three components, from which the \emph{model} contains the business logic, the \emph{controller} processes interactions and the \emph{view} presents some kind of user interface \cite{mvc}.
 
-This pattern is not very well defined and is subject of constant discussions. While it is commonly agreed upon that the application should be split in the three layers, the data flows and connections between the components are described in many different ways. The original concept of MVC developed for Smalltalk as described before the model holds logic and data of the application. Views subscribe at the model for notifications on changes of data in order to be able to update and refresh themselves. The controller was responsible of managing user interaction, which includes switching between views and forwarding requests to the model. This situation can be seen in Figure \ref{fig:mvc-smalltalk}. This direct interaction between model and view is often not desirable, especially in the context of web applications, which leaves it deprecated today. 
+This pattern is not very well defined and is subject of constant discussions. While it is commonly agreed upon that the application should be split in the three layers, the data flows and connections between the components are described in many different ways. The original concept of MVC developed for Smalltalk as described before the model holds logic and data of the application \cite[p.4]{gof}. Views subscribe at the model for notifications on changes of data in order to be able to update and refresh themselves. The controller was responsible of managing user interaction, which includes switching between views and forwarding requests to the model. This situation can be seen in Figure \ref{fig:mvc-smalltalk}. This direct interaction between model and view is often not desirable, especially in the context of web applications, which leaves it deprecated today. 
 
 \begin{figure}[htbp]
 	\centering
@@ -69,7 +69,7 @@ This pattern is not very well defined and is subject of constant discussions. Wh
 \end{figure}
 
 \subsection{Model-View-Presenter}
-The Model-View-Presenter (MVP) pattern is similar to the MVC-model as it shares the concept of separating the application into three layers. However the responsibilities differ considerably, as can be seen in Figure \ref{fig:mvp}. The view only communicates with the presenter and does not know about the model. The presenter handles user input and requests, gathers data from the model, updates it and finally is responsible for refreshing the view with new data. This implies that the model does not know about the existence of view or presenter and at least in the original concept of MVP all business logic is placed in the presenter classes. It is important to note that it is vital for the use of this pattern to implement it using interfaces. This ensures that its main goal, easy testability, can be reached easily. 
+The Model-View-Presenter (MVP) pattern is similar to the MVC-model as it shares the concept of separating the application into three layers. The responsibilities between the two patterns differ considerably, as can be seen in Figure \ref{fig:mvp}. The view only communicates with the presenter and does not know about the model. The presenter handles user input and requests, gathers data from the model, updates it and finally is responsible for refreshing the view with new data. This implies that the model does not know about the existence of view or presenter and at least in the original concept of MVP all business logic is placed in the presenter classes \cite{mvp}. It is important to note that it is vital for the use of this pattern to implement it using interfaces. This ensures that its main goal, easy testability, can be reached easily. 
 
 \begin{figure}[htbp]
 	\centering
@@ -99,7 +99,7 @@ In the concept of passive view the model is not connected with the view, which i
 
 
 \subsection{Client-Server}
-The Client-Server model describes a way to separate tasks within a network. While the client, which can be any kind of computer program, requests a resource from the server. It is designated to be used within the internet and is still on of the cornerstones of current web infrastructure. A prominent example of the client-server model is the Domain-Name-System (DNS). When a user types in the domain name of a service he wants to access, the browser needs to translate the name into a IP-Address he can work with. In order to do that he sends a request to a DNS-Server, making him a client. While he does not need to know how exactly the resolving takes places he requires the server response to have a certain format described in the communication protocol. 
+The Client-Server model describes a way to separate tasks within a network. While the client, which can be any kind of computer program, requests a resource from the server. It is designated to be used within the internet and is still on of the cornerstones of current web infrastructure \cite[p. 3ff]{server} . A prominent example of the client-server model is the Domain-Name-System (DNS). When a user types in the domain name of a service he wants to access, the browser needs to translate the name into a IP-Address he can work with. In order to do that he sends a request to a DNS-Server, making him a client. While he does not need to know how exactly the resolving takes places he requires the server response to have a certain format described in the communication protocol. 
 
 There are several benefits of using this architecture. For starters it centralizes the administration which lowers the effort to managing access rights, accounts and so on. Because the important data is in one place it is easier to create backups and ensure security policies. However a server is considered a \emph{Single Point of Failure}, meaning that a whole service will be unavailable if the server for any reason is not reachable, making it a worthy target of attacks. While the impact depends on the actual service built, scalability and extensibility are important factors. It is easier to extend the features provided by a service when using the client-server-model it reduces scalability as the hardware needs to be upgraded from time to time to meet a increased number of requests directed to the server.
 \begin{figure}[htbp]
@@ -110,7 +110,15 @@ There are several benefits of using this architecture. For starters it centraliz
 \end{figure}
 
 \subsection{Peer-to-Peer}
-Peer-to-Peer (P2P) infrastructure is the counterpart of client-server-models. No central server exists which means that each of the clients are equally featured, each client has the means to request and provide resources. P2P-Networks are considered more robust and scalable than Client-Server set-ups, as the failure of one node does not lead to the breakdown of the whole system.
+Peer-to-Peer (P2P) infrastructure is the counterpart of client-server-models. No central server exists which means that each of the clients are equally featured, each client has the means to request and provide resources. P2P-Networks are considered more robust and scalable than Client-Server set-ups, as the failure of one node does not lead to the breakdown of the whole system. In picture \ref{fig:p2p} a typical P2P-setup can be seen. 
+
+\begin{figure}[htbp]
+	\centering
+	\label{fig:p2p}
+	\includegraphics[width=0.5\textwidth]{./content/pictures/P2P-network.jpg}
+	\caption{Peer-to-peer setup. Each peer has the same rights, no central server exists.}
+	\caption*{Source: \href{https://commons.wikimedia.org/w/index.php?curid=2551723}{https://commons.wikimedia.org/w/index.php?curid=2551723}, accessed on 6.9.2017}
+\end{figure}
 
 \subsection{Multi-Tier and Multi-Layer Architecture}
 \label{sec:multi-tier}
@@ -183,7 +191,7 @@ There are several possibilities which differ significantly depending on the data
 \end{itemize}
 
 \subsubsection{Cache invalidation}
-In the context of cache invalidation a quote from Phil Karlton is especially famous\footnote{It is not clear if the quote is genuinely made by Karlton, however it is generally attributed to him.}: 
+In the context of cache invalidation a quote from Phil Karlton is especially famous:
 \begin{quote}
 There are only two hard things in Computer Science: cache invalidation and naming things.
 \end{quote}
