--- a/thesis/content/references.bib
+++ b/thesis/content/references.bib
@@ -1,4 +1,4 @@
-@book{Gof94,
+@book{gof,
     author  	= "Erich Gamma, Richard Helm and others",
     title   	= "Desing Patterns - Elements of Reusable Object-Oriented Software",
     year    	= "1994",
@@ -40,26 +40,70 @@ title = "Designing Reusable Classes",
 year = "1991"
 }
 
-@article{Truyen04,
+@book{peaa,
+	author = {Martin-Fowler, David Rice and others},
+	title = {Patterns of Enterprise Application Architecture},
+	date = {November 2002},
+	publisher = {Addison Wesley},
+	OPTisbn = {0-321-12742-0},
+}
+
+
+@article{truyen04,
 author = "Eddy Truyen, Wouter Joosen, Bo Nørregaard Jørgensen, Pierre Verbaeten",
 title = "A Generalization and Solution to the Common Ancestor Dilemma Problem in Delegation-Based Object Systems",
 year = "2004"
 }
 
 @book{robert03,
-	author = {Martin Robert},
-	title = {Agile Software Development, Principles, Patterns, and Practices},
-	date = {2003},
-	isbn = {0135974445},
+	author = Martin Robert",
+	title = "Agile Software Development, Principles, Patterns, and Practices",
+	date = "2003",
+	isbn = "0135974445",
 }
 @article{srp,
-	author = {D.L. Parnas},
-	title = {On the Criteria To Be Used in Decomposing Systems into Module},
-	date = {1972}
+	author = "D.L. Parnas",
+	title = "On the Criteria To Be Used in Decomposing Systems into Module",
+	date = "1972"
 }
 
 @article{ocp,
-	author = {Bertrand Meyer},
-	title = {Object Oriented Software Construction},
+	author = "Bertrand Meyer",
+	title = "Object Oriented Software Construction",
+	date = "1988"
+}
+@book{clean-code,
+	author = {Robert C. Martin},
+	title = {Clean Code},
+	date = {December 2009},
+	publisher = {Pearson Education Inc.},
+	isbn = {978-0-13-235088-4},
+}
+@article{data-types,
+	author={Luca Cardelli, Peter Wegner},
+	title = {On Understanding Types, Data Abstraction, and Polymorphism},
+	date = {December 1985}
+}
+@article{coupling,
+	author={Johann Eder, Gerti Kappel, Michael Schrefl},
+	title={Coupling and Cohesion in Object-Oriented Systems},
+	date = {1994}
+}
+@article{mvc,
+	author={Glenn E. Krasner, Stephen T. Pope},
+	title = {A Description of the Model-View-Controller User Interface Paradigm in the Smalltalk-80 System},
 	date = {1988}
 }
+@article{mvp,
+	author={Valentin Corneliu Pau ,Marius Iulian Mihailescu, Octavian Stanescu},
+	title = {Model View Presenter Design Pattern},
+	date={2010}
+}
+@book{server,
+	author={Gilbert Held},
+	title = {Server Management (Best Practices},
+	date = {2000},
+	isbn={978-0849398230},
+	publisher={Auerbach Publications}
+}
+
